Resolves #16 - Fixed line break on hover bug, added services mobile view

--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -89,58 +89,3 @@
         }
     }
 }
-
-///////////////// SERVICES ////////////////
-
-.services {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 4em 0;
-  h2 {
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 4.5em;
-    letter-spacing: -4px;
-  }
-  .container {
-    box-sizing: border-box;
-    padding: 1em 1em;
-    height: 100%;
-    max-width: 1200px;
-    overflow: hidden;
-  .service {
-    box-sizing: border-box;
-    display: inline-block;
-    float: left;
-    padding: 1em 1em;
-    width: 25%;
-    transition: margin 0.2s ease-out;
-
-    &:hover {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      border-radius: 10px;
-      margin: -5px -0 0 0;
-    }
-    img {
-      max-width: 64px;
-      margin: 0 0 15px 0;
-    }
-    h3 {
-      font-family: "Montserrat", sans-serif;
-      font-weight: bold;
-    }
-    p {
-      color: #9c9e9f;
-    }
-
-      @media only screen and (max-width: 860px) {
-        width: 50%;
-      }
-  }
-}
-.button__container {
-  text-align: center;
-  margin: 1em 0 0 0;
-}
-}
